--- a/index.html
+++ b/index.html
@@ -198,6 +198,8 @@
         </div>
     </footer>
 
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script src="./scripts/contador-descargas.js"></script>
 </body>
 </html>
