--- a/pages/elya.html
+++ b/pages/elya.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entre Lienzos y Acordes</title>
+    <title>Albert Sánchez - ELYA</title>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Montserrat:wght@400;600;700&family=Raleway:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/elya.css">
     <script src="../scripts/stars.js"></script>
