--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@
     </header>
 
     <main>
+        <section class="news-banner" onclick="window.open('https://open.spotify.com/intl-es/album/2SVsoV2Mqiin6tcH3NoQrD?si=Csps8JDQS_6fAG7cAjXgYg', '_blank')">
+            <div class="news-content">
+                <span class="news-label" data-translate="home.countdownLabel">Cuenta Regresiva</span>
+                <span class="news-separator">•</span>
+                <span class="news-text" data-translate="home.newSingleRelease">Nuevo single publicado</span>
+            </div>
+        </section>
+
         <section class="hero-section">
             <div class="hero-content">
                 <h1 class="hero-title" data-translate="home.title">Albert Sánchez</h1>
@@ -152,7 +160,7 @@
                 <a href="https://x.com/Meliory2" target="_blank" class="social-icon" id="twitter">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m17.687 3.063l-4.996 5.711l-4.32-5.711H2.112l7.477 9.776l-7.086 8.099h3.034l5.469-6.25l4.78 6.25h6.102l-7.794-10.304l6.625-7.571zm-1.064 16.06L5.654 4.782h1.803l10.846 14.34z"/></svg>
                 </a>
-                <a href="#" target="_blank" class="social-icon" id="spotify">
+                <a href="https://open.spotify.com/intl-es/artist/5lxFqHNzqcM9Ct2FBA8vHh?si=7xoj-4HpSyqCkCFZT_OK3w" target="_blank" class="social-icon" id="spotify">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17.9 10.9C14.7 9 9.35 8.8 6.3 9.75c-.5.15-1-.15-1.15-.6c-.15-.5.15-1 .6-1.15c3.55-1.05 9.4-.85 13.1 1.35c.45.25.6.85.35 1.3c-.25.35-.85.5-1.3.25m-.1 2.8c-.25.35-.7.5-1.05.25c-2.7-1.65-6.8-2.15-9.95-1.15c-.4.1-.85-.1-.95-.5s.1-.85.5-.95c3.65-1.1 8.15-.55 11.25 1.35c.3.15.45.65.2 1m-1.2 2.75c-.2.3-.55.4-.85.2c-2.35-1.45-5.3-1.75-8.8-.95c-.35.1-.65-.15-.75-.45c-.1-.35.15-.65.45-.75c3.8-.85 7.1-.5 9.7 1.1c.35.15.4.55.25.85M12 2A10 10 0 0 0 2 12a10 10 0 0 0 10 10a10 10 0 0 0 10-10A10 10 0 0 0 12 2"/></svg>
                 </a>
                 <a href="https://www.linkedin.com/in/albert-sánchez-santed-26a1b3304/" target="_blank" class="social-icon" id="linkedin">
